<resources>
    <string name="app_name">DroxBox</string>

    <string name="action_settings">Settings</string>
    <string name="tv_home_description">Almacena todos tus recuerdos y documentos en nuestra nube.</string>
    <string name="btn_home_comenzar">Comenzar</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login_message_starting">Estamos preparando todo...</string>
    <string name="tv_login_title">Login</string>
    <string name="tv_login_email">Email</string>
    <string name="tv_login_password">Password</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="login_btn_submit">Submit</string>
    <string name="tv_new_to_droxbox">New to Droxbox?</string>
    <string name="tv_register_action"><u>Register now! </u></string>
    <string name="login_error_message">No se pudo iniciar sesión, por favor intenta más tarde</string>
    <string name="tv_login_fullName">Full Name</string>
    <string name="hint_enter_your_fullName">Enter your name</string>
    <string name="tv_sign_in">Are you already registered?</string>
    <string name="tv_sigIn_action"><u>Login</u></string>
    <string name="tv_register_title">Register</string>
    <string name="home_title">Your Files</string>
    <string name="home_tvEmpty">You do not have files yet :c</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_et_fileName">Enter file name</string>
    <string name="tv_choose_file">Choose the file</string>
    <string name="tv_upload_file">Upload File</string>
    <string name="upload_success_message">Your file has already been uploaded.</string>
    <string name="upload_error_message">Could not upload your file.</string>
    <string name="tv_fileName">Name:</string>
    <string name="tv_createdDate">Created Date:</string>
    <string name="tv_lastModified">Last Modified:</string>
    <string name="name_required_message">The name is required.</string>
    <string name="file_exist_message">A file with that name already exists</string>
    <string name="picture_required_message">Select one file pls</string>
    <string name="package_name">com.example.droxbox</string>
    <string name="dialog_upload_btn">Upload</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="firestore_succes_update">Success Updated.</string>
    <string name="firestore_error_update">Error Updated.</string>
    <string name="dialog_ok_btn">Ok</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="common_offline">You are offline</string>
    <string name="common_try_again"><u>Try Again</u></string>
    <string name="offline_message">Offline try again</string>
    <string name="firestore_success_deleted">Success Deleted</string>
</resources>