<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginModule.LoginActivity">

   <TextView
       android:id="@+id/tv_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="140dp"
       android:text="@string/tv_login_title"
       android:textSize="24sp"
       android:textColor="@color/primary_color"
       />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:text="@string/tv_login_email"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_enter_your_email"
        />
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:text="@string/tv_login_password"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:inputType="textPassword"
        android:hint="@string/hint_enter_your_password"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn_submit"
        />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/tv_new_to_droxbox"
        android:textSize="12sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_register_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toEndOf="@id/tv_register"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/tv_register_action"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        />


</androidx.constraintlayout.widget.ConstraintLayout>