<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddFileFragment">

    <TextView
        android:id="@+id/tv_uploadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/tv_upload_file"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/et_fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_uploadTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="14"
        android:hint="@string/hint_et_fileName"
        android:inputType="textPersonName"
        />
    <TextView
        android:id="@+id/tv_chooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_fileName"
        app:layout_constraintStart_toStartOf="@id/et_fileName"
        android:layout_marginTop="20dp"
        android:text="@string/tv_choose_file"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <ImageView
        android:id="@+id/iv_choose_action"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/tv_chooseFile"
        app:layout_constraintTop_toBottomOf="@id/et_fileName"
        android:layout_marginTop="17dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/choose_file"
        />
    <ImageView
        android:id="@+id/iv_file"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/tv_chooseFile"
        app:layout_constraintStart_toStartOf="@id/tv_chooseFile"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        />
    <ProgressBar
        android:id="@+id/pb_uploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>