<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fileDetailModule.FileDetailFragment">

    <ImageView
        android:id="@+id/iv_holder"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_holder"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_fileName"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etFileNameHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_holder"
        app:layout_constraintStart_toEndOf="@id/tvFileName"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:minEms="5"
        android:maxEms="10"

        />
    <TextView
        android:id="@+id/tvCreatedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFileName"
        app:layout_constraintStart_toStartOf="@id/tvFileName"
        android:layout_marginTop="40dp"
        android:text="@string/tv_createdDate"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvCreatedDateHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFileName"
        app:layout_constraintStart_toEndOf="@id/tvCreatedDate"
        android:layout_marginTop="43dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tvLastModified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCreatedDate"
        app:layout_constraintStart_toStartOf="@id/tvFileName"
        android:layout_marginTop="40dp"
        android:text="@string/tv_lastModified"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvLastModifiedHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCreatedDate"
        app:layout_constraintStart_toEndOf="@id/tvCreatedDate"
        android:layout_marginTop="43dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>